[package]
name = "minesweeper-tutorial"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug = ["board_plugin/debug", "bevy-inspector-egui"]

[dependencies]
bevy = "0.10.1"
board_plugin = { path = "board_plugin" }
bevy-inspector-egui = { version = "0.18.3", optional = true }

[workspace]
resolver = "2"
members = [
  "board_plugin"
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"
rustflags = ["-Zshare-generics=y"]
