[package]
name = "minesweeper-tutorial"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug = ["board_plugin/debug", "bevy-inspector-egui"]

[dependencies]
bevy = { version = "0.10.1", default-features = false, features = [
  "bevy_render",
  "bevy_winit",
  "bevy_text",
  "bevy_sprite",
  "bevy_asset",
  "bevy_core_pipeline",
  "png",
] }
board_plugin = { path = "board_plugin" }
bevy-inspector-egui = { version = "0.18.3", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.bevy]
version = "0.10.1"
default-features = false
features = ["x11"]

[workspace]
resolver = "2"
members = ["board_plugin"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
